--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.2",
+    "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
     "mongoose": "^8.7.2",
     "reflect-metadata": "^0.2.0",
