--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mongoose": "^8.7.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "winston": "^3.16.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
